feat: employee model changes
