# app/middlewares/employeeValidation.js
@@ -18,7 +18,7 @@
      firstName: joi.string().min(3).max(15).required(),
      lastName: joi.string().min(3).max(15).required(),
      email: joi.string().email().required(),
-     password: joi.string().pattern(new RegExp('^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{8,20}$')).required()
+     department: joi.string().required(),
+     salary:joi.number().required()
  })
- 
  module.exports = {employeeSchema}
